--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@astrojs/cloudflare": "^12.6.12",
     "@astrojs/starlight": "^0.37.3",
+    "@mermaid-js/layout-elk": "^0.2.0",
     "astro": "^5.6.1",
+    "astro-mermaid": "^1.2.0",
+    "mermaid": "^11.12.2",
     "sharp": "^0.34.2",
     "starlight-image-zoom": "^0.13.2"
   },
